--- a/.github/workflows/ymc-readme.yml
+++ b/.github/workflows/ymc-readme.yml
@@ -1,16 +1,25 @@
-name: Ymc Readme
+name: update readme
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '20 * * * *' #test per 20 min
   workflow_dispatch:
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: set up node on ubuntu
     runs-on: ubuntu-latest
     steps:
-      - uses: ymc-gitub/ymc-gitub@master
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+
+      - name: Set node version to ${{ matrix.node_version }}
+        uses: actions/setup-node@v3
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          node-version: ${{ matrix.node_version }}
+          cache: pnpm
+      - name: set up base env
+        run: echo "ok"
+    #   - uses: ymc-gitub/ymc-gitub@master
+    #     with:
+    #       WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+    #       GH_TOKEN: ${{ secrets.GH_TOKEN }}
