--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
-    name: set up node on ubuntu
+    name: update github profile reamdme 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
