--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
-    "name":"ymc-github",
-    "version":"1.0.0",
-    "private":true
+  "name": "ymc-github",
+  "version": "1.0.0",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"test done!\" && exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YMC-GitHub/ymc-github.git"
+  },
+  "author": {
+    "name": "yemiancheng",
+    "email": "ymc.github@gmail.com",
+    "url": "https://github.com/ymc-github"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/YMC-GitHub/ymc-github/issues"
+  },
+  "homepage": "https://github.com/YMC-GitHub/ymc-github#readme"
 }
