chore(core): set os
ubuntu-latest
windows-latest
macos-latest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         # set nodejs matrix
         node_version: [14.x, 16.x]
         # set os matrix
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest,macos-latest]
       fail-fast: false
 
     steps:
