--- a/.github/workflows/ymc-github.gen-readme.yaml
+++ b/.github/workflows/ymc-github.gen-readme.yaml
@@ -77,7 +77,7 @@ jobs:
         run:  |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add README.md
+          git add README.md updated-time.md
           git commit -m "chore(core): update readme in github action"
       - name: push changes
         uses: ad-m/github-push-action@master
