--- a/.github/workflows/ymc-github.gen-readme.yaml
+++ b/.github/workflows/ymc-github.gen-readme.yaml
@@ -17,6 +17,18 @@ name: ymc-github-gen-readme
 on:
   push:
     branches: [master, main]
+  schedule:
+    # note: in github beijing time +8 h
+    # m h d M w y
+    # - cron: 30 * * * * # run per 30 min
+    # - cron: 0 8,12 * * * # run when 8:00 and 12:00 (utc)
+    - cron: 0 8 * * * # run when 0:00 (beijing)
+    # - cron: 0 0,4 * * * # run when 8:00 and 12:00 (beijing)
+    # - cron: 0 0,12 * * * # run when 8:00 and 20:00 (beijing)
+    # - cron: 0 0,4,12 * * * # run when 8:00,12:00,20:00 (beijing)
+    # - cron: 0 20 * * 0-5 #  runs at minute 0 of the 4th beijing hour from week 0 to 5
+    # - cron: 8 17,20 * * 1,3,5 #  runs at minute 8 of the 1th,20th beijing hour from week 1 ,week 3 , week 5
+    # - cron: 20/15 * * * * # runs every 15 minutes starting from minute 20 through 59 (minutes 20, 35, and 50)
   workflow_dispatch:
 jobs: 
   # build job
