--- a/.github/workflows/ymc-github.gen-readme.yaml
+++ b/.github/workflows/ymc-github.gen-readme.yaml
@@ -29,6 +29,7 @@ on:
     # - cron: 0 20 * * 0-5 #  runs at minute 0 of the 4th beijing hour from week 0 to 5
     # - cron: 8 17,20 * * 1,3,5 #  runs at minute 8 of the 1th,20th beijing hour from week 1 ,week 3 , week 5
     # - cron: 20/15 * * * * # runs every 15 minutes starting from minute 20 through 59 (minutes 20, 35, and 50)
+    # - cron: 20/15 17 * * 2 # runs every 15 minutes starting from minute 20 through 59 (minutes 20, 35, and 50)
   workflow_dispatch:
 jobs: 
   # build job
