--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,13 @@ on:
 #       - main
 # fired on schedule per 20 min
   schedule:
-    # run at 12:00 (beijing) on working days
     # note: in github beijing time +8 h
-    - cron: 0 20 * * 0-5
+    # - cron: 0 20 * * 0-5
+    # - cron: 0 20 * * 0-5 #  runs at minute 0 of the 4th beijing hour from week 0 to 5
+    - cron: 18 17,22,10 * * 1,3,5 #  runs at enable the beijing 1:18,6:18,18:18 from week 1 ,week 3 , week 5
+    - cron: 8 17,22,10 * * 0,2,4,6
+    # - cron: 20/15 * * * * # runs every 15 minutes starting from minute 20 through 59 (minutes 20, 35, and 50)
+    # - cron: 20/15 17 * * 2 # runs every 15 minutes starting from minute 20 through 59 (minutes 20, 35, and 50)
   workflow_dispatch:
 jobs: 
   # build job
