--- a/.github/workflows/ymc-github.gen-readme.yaml
+++ b/.github/workflows/ymc-github.gen-readme.yaml
@@ -85,6 +85,13 @@ jobs:
 
       - name: install dependencies
         run: pnpm i
+    #   - uses: szenius/set-timezone@v1.0
+    #     name: set timezone
+    #     with: 
+    #         timezoneLinux: "Asia/Shanghai"
+    #         timezoneMacos: "Asia/Shanghai"
+    #         timezoneWindows: "Shanghai Standard Time"
+    #   https://github.com/marketplace/actions/set-timezone
       - name: gen readme with repo bins
         run: ./bin/render-readme.js
       - name: commit files
@@ -92,7 +99,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add README.md updated-time.md
-          git commit -m "chore(core): update readme in github action"
+          git commit -m "chore(core): update readme in github action" --date "$(date "+%Y-%m-%d %H:%M:%S" -d "+8 hour") +0800"
       - name: push changes
         uses: ad-m/github-push-action@master
         with: 
