chore(core): enable on schedule

--- a/.github/workflows/ymc-github.gen-readme.yaml
+++ b/.github/workflows/ymc-github.gen-readme.yaml
@@ -17,12 +17,12 @@ name: ymc-github-gen-readme
 on:
   push:
     branches: [master, main]
-#   schedule:
+  schedule:
     # note: in github beijing time +8 h
     # m h d M w y
     # - cron: 30 * * * * # run per 30 min
     # - cron: 0 8,12 * * * # run when 8:00 and 12:00 (utc)
-    # - cron: 0 4 * * * # run when 12:00 (beijing)
+    - cron: 0 3 * * * # run when 12:00 (beijing)
     # - cron: 0 8 * * * # run when 0:00 (beijing)
     # - cron: 0 0,4 * * * # run when 8:00 and 12:00 (beijing)
     # - cron: 0 0,12 * * * # run when 8:00 and 20:00 (beijing)
